--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "teamleader-test",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn type-check"
+      "pre-commit": "npm run type-check"
     }
   },
   "dependencies": {
